Subo pruebas hechas en HTML, parte 3

--- a/Proyecto1/index.html
+++ b/Proyecto1/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto 1 - Kevin Chévez</title>
-    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-    
+    <nav>
+        Barra de Navegación, añadir elementos
+    </nav>
+
+    <header>
+        <h1>Portafolio de presentación.</h1>
+    </header>
+
+    <section>
+        <article>
+            <h2>Artículo</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, corrupti impedit. Ut aliquam distinctio esse
+                molestiae hic quos fugit architecto fugiat pariatur dolorum eveniet, quae eum repellendus iste ea ipsum
+            </p>
+        </article>
+    </section>
+
+    <aside>
+        <h2>Parte publicitaria</h2>
+        <img src="cat.webp" alt="Un hermoso gato negro" style="width:96px;height:66.2px;">
+    </aside>
+
+    <footer>
+        <p>Pie de pagina</p>
+        <a href="mailto:kchevez@espol.edu.ec">kchevez@espol.edu.ec</a>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
