--- a/Pruebas/htmlPruebas.html
+++ b/Pruebas/htmlPruebas.html
@@ -157,6 +157,27 @@
             <td>Pie 2</td>
         </tfoot>
     </table>
+    <hr>
+
+    <!-- Etiqueta div usada como contenedor, no es bueno poner div anidados sin sentido porque
+        Añade complejidad al html. -->
+    <div>
+        <p>Parrafo dentro de un div</p>
+    </div>
+
+    <!-- Atributos de etiquetas ID y CLASS -->
+    <!-- 
+        El atributo ID sirve para identificar una etiqueta y esta poder ser usada mas adelante
+        ya sea por codigo en javascript o cualquier otro. Deben ser únicos.
+    -->
+    <h1 id="MainTitle"> Titulo principal </h1>
+    <!-- 
+        El atributo CLASS sirve para identificar un grupo de etiquetas y estas poder ser usadas
+        mas adelante de la misma manera, ya sea por codigo en javascript. Se pueden repetir ids.
+    -->
+    <div class="ImgContainer">
+        <p>Contenedor de imagenes</p>
+    </div>
 
 </body>
 </html>
