Subo pruebas hechas en HTML, parte 4

--- a/Pruebas/htmlPruebas.html
+++ b/Pruebas/htmlPruebas.html
@@ -41,6 +41,8 @@
     <!-- Etiqueta de Hipervínculos -->
     <a href="https://www.google.com">Prueba de hipervínculo en la misma pestaña</a><br>
     <a href="https://www.google.com" target="_blank">Prueba de hipervínculo en otra pestaña</a>
+    <!-- Se pueden hacer referencias a etiquetas con atributos de IDs (unicos). -->
+    <a href="#MainTitle">Referencia al final</a>
     <hr>
 
     <!-- Etiqueta de Imágenes -->
