Subo estructura inicial de mi proyecto 1.

--- a/Proyecto1/index.html
+++ b/Proyecto1/index.html
@@ -22,7 +22,8 @@
         <article>
             <h2>Artículo</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, corrupti impedit. Ut aliquam distinctio esse
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, corrupti impedit. Ut aliquam distinctio
+                esse
                 molestiae hic quos fugit architecto fugiat pariatur dolorum eveniet, quae eum repellendus iste ea ipsum
             </p>
         </article>
