Partes realizadas en clases: CSS y Actualización de HTML

--- a/Proyecto1/index.html
+++ b/Proyecto1/index.html
@@ -6,21 +6,126 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto 1 - Kevin Chévez</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
     <nav>
-        Barra de Navegación, añadir elementos
+        <div id="nav-bar">
+            <div class="logo-myself">
+                Logo
+            </div>
+            <div class="nav-opt">
+                ¿Quién soy?
+            </div>
+            <div class="nav-opt">
+                Hobbies
+            </div>
+            <div class="nav-opt">
+                Estudios
+            </div>
+            <div class="nav-opt">
+                Pregúntame
+            </div>
+        </div>
     </nav>
 
     <header>
-        <h1>Portafolio de presentación.</h1>
+        <h1>Conoce un poco más sobre mí y quién quiero SER.</h1>
     </header>
 
-    <section>
+    <section >
+        <img src="" alt="">
         <article>
-            <h2>Artículo</h2>
+            <h2>¿Quién soy?</h2>
+            <p>
+                Mi nombre es Kevin Isaac Chévez coronel, nací en Ecuador - Guayaquil el 24 de Febrero del
+                2000, actualmente vivo en el sur de mi ciudad natal, soy estudiante de la Escuela Superior
+                Politécnica del Litoral (Espol) y sigo la carrera de Ingeniería en las Ciencias de la
+                Computación.
+            </p>
+            <p>
+                Tengo un hermano y soy el menor, actualmente vivo con mi mamá y mi hermano. Amo tanto a
+                mi mamá como a mi papá. Me considero como una persona perseverante, soy super responsable,
+                creativo y respetuoso. Como es evidente mi color favorito es el verde neón y el negro, me
+                encanta la naturaleza en su frondoso estado y los atardeceres me enamoran. Me gusta trabajar
+                en grupos que sean participativos y que se note el esfuerzo que aplican.
+            </p>
+        </article>
+    </section>
+    <section>
+        <img src="" alt="">
+        <article>
+            <h2>Hobbies</h2>
+            <p>
+                En mis pasatiempos me gusta realizar la siguientes actividades:
+            </p>
+            <ul>
+                <li>Aprender nuevas tecnologías.</li>
+                <li>Aprender las bases de los lenguajes de programación.</li>
+                <li>Jugar basketball y videojuegos.</li>
+                <li>Cantar, crear música Rap, o improvisar.</li>
+                <li>Filosofar y pensar sobre mi vida actual, mis acciones y cómo ser cada día mejor.</li>
+                <li>Revisar y arreglar circuitos eléctricos de aparatos que están dañados.</li>
+                <li>Ver los atardeceres y apreciar la naturaleza.</li>
+                <li>Descanzar en temporadas de climas fríos.</li>
+            </ul>
+            <p>
+                Entre todos mis pasatiempos tengo como mi top 3 de actividades
+                favoritas las siguientes de manera resumida:
+            </p>
+            <ol>
+                <li>Estudiar</li>
+                <li>Entretenerme</li>
+                <li>Filosofar</li>
+            </ol>
+        </article>
+    </section>
+    <section>
+        <img src="" alt="">
+        <article>
+            <h2>Estudios</h2>
+            <p>
+                Inicialmente comencé mis estudios en el pre kinder brindado por el CAMI de la ciudad (ubicación).
+            </p>
+            <p>
+                Luego de aquello seguí mis estudios primarios en la Escuela Fiscal Thomas Jefferson
+                (actualmente renombrada como Unidad Educativa Fiscal Ciudad de Esmeraldas).
+            </p>
+            <p>
+                Mi educación básica y secundaria continuó en el Colegio Fiscal Otto Arosemena Gómez
+                (ubicado cercanamente a mis anteriores instituciones educativas), donde seguí y culminé
+                el bachillerato en Ciencias.
+            </p>
+            <p>
+                Posteriormente seguí estudiando de manera autónoma en internet para ingresar a la Espol.
+            </p>
+            <p>
+                Actualmente estudio la carrera de Computación en la Espol y de manera adicional y por
+                beneficios de la universidad he estudiado en cursos adicionales que ayudan a formar mi
+                profesión, aquellos cursos son los siguientes:
+            </p>
+            <ul>
+                <li>
+                    Curso de Programación Orientada a Objetos en Java Foundations -
+                    ilearning Oracle Academy.
+                </li>
+                <li>
+                    Curso de Redes de Datos Introduction to Networks en CISCO Networking Academy.
+                </li>
+            </ul>
+            <p>
+                A continuación presento una tabla que identifica mis conocimientos en distintos softwares:
+            </p>
+            <table id="tabla-estudios">
+
+            </table>
+        </article>
+    </section>
+    <section>
+        <img src="" alt="">
+        <article>
+            <h2>Pregúntame</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, corrupti impedit. Ut aliquam distinctio
                 esse
@@ -31,7 +136,7 @@
 
     <aside>
         <h2>Parte publicitaria</h2>
-        <img src="cat.webp" alt="Un hermoso gato negro" style="width:96px;height:66.2px;">
+        <img src="imagenes/cat.webp" alt="Un hermoso gato negro" style="width:96px;height:66.2px;">
     </aside>
 
     <footer>
