Subo pruebas realizadas hasta el momento.

--- a/Pruebas/htmlPruebas.html
+++ b/Pruebas/htmlPruebas.html
@@ -47,7 +47,7 @@
 
     <!-- Etiqueta de Imágenes -->
     <!-- Imagen proveniente de la carpeta actual -->
-    <img src="cat.webp" height="100" />
+    <img src="imagenes/cat.webp" height="100" />
     <!-- Imagen proveniente del internet -->
     <img src="https://www.pngkey.com/png/detail/14-148130_minion-imagenes-de-100x100-pixeles.png" height="100" />
     <hr>
