Subo avance de mi proyecto haciendo uso de CSS

--- a/Proyecto1/index.html
+++ b/Proyecto1/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="widtd=device-widtd, initial-scale=1.0">
     <title>Proyecto 1 - Kevin Chévez</title>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
@@ -33,115 +33,203 @@
     <header>
         <h1>Conoce un poco más sobre mí y quién quiero SER.</h1>
     </header>
-
-    <section >
-        <img src="" alt="">
-        <article>
-            <h2>¿Quién soy?</h2>
-            <p>
-                Mi nombre es Kevin Isaac Chévez coronel, nací en Ecuador - Guayaquil el 24 de Febrero del
-                2000, actualmente vivo en el sur de mi ciudad natal, soy estudiante de la Escuela Superior
-                Politécnica del Litoral (Espol) y sigo la carrera de Ingeniería en las Ciencias de la
-                Computación.
-            </p>
-            <p>
-                Tengo un hermano y soy el menor, actualmente vivo con mi mamá y mi hermano. Amo tanto a
-                mi mamá como a mi papá. Me considero como una persona perseverante, soy super responsable,
-                creativo y respetuoso. Como es evidente mi color favorito es el verde neón y el negro, me
-                encanta la naturaleza en su frondoso estado y los atardeceres me enamoran. Me gusta trabajar
-                en grupos que sean participativos y que se note el esfuerzo que aplican.
-            </p>
-        </article>
-    </section>
-    <section>
-        <img src="" alt="">
-        <article>
-            <h2>Hobbies</h2>
-            <p>
-                En mis pasatiempos me gusta realizar la siguientes actividades:
-            </p>
-            <ul>
-                <li>Aprender nuevas tecnologías.</li>
-                <li>Aprender las bases de los lenguajes de programación.</li>
-                <li>Jugar basketball y videojuegos.</li>
-                <li>Cantar, crear música Rap, o improvisar.</li>
-                <li>Filosofar y pensar sobre mi vida actual, mis acciones y cómo ser cada día mejor.</li>
-                <li>Revisar y arreglar circuitos eléctricos de aparatos que están dañados.</li>
-                <li>Ver los atardeceres y apreciar la naturaleza.</li>
-                <li>Descanzar en temporadas de climas fríos.</li>
-            </ul>
-            <p>
-                Entre todos mis pasatiempos tengo como mi top 3 de actividades
-                favoritas las siguientes de manera resumida:
-            </p>
-            <ol>
-                <li>Estudiar</li>
-                <li>Entretenerme</li>
-                <li>Filosofar</li>
-            </ol>
-        </article>
-    </section>
-    <section>
-        <img src="" alt="">
-        <article>
-            <h2>Estudios</h2>
-            <p>
-                Inicialmente comencé mis estudios en el pre kinder brindado por el CAMI de la ciudad (ubicación).
-            </p>
-            <p>
-                Luego de aquello seguí mis estudios primarios en la Escuela Fiscal Thomas Jefferson
-                (actualmente renombrada como Unidad Educativa Fiscal Ciudad de Esmeraldas).
-            </p>
-            <p>
-                Mi educación básica y secundaria continuó en el Colegio Fiscal Otto Arosemena Gómez
-                (ubicado cercanamente a mis anteriores instituciones educativas), donde seguí y culminé
-                el bachillerato en Ciencias.
-            </p>
-            <p>
-                Posteriormente seguí estudiando de manera autónoma en internet para ingresar a la Espol.
-            </p>
-            <p>
-                Actualmente estudio la carrera de Computación en la Espol y de manera adicional y por
-                beneficios de la universidad he estudiado en cursos adicionales que ayudan a formar mi
-                profesión, aquellos cursos son los siguientes:
-            </p>
-            <ul>
-                <li>
-                    Curso de Programación Orientada a Objetos en Java Foundations -
-                    ilearning Oracle Academy.
-                </li>
-                <li>
-                    Curso de Redes de Datos Introduction to Networks en CISCO Networking Academy.
-                </li>
-            </ul>
-            <p>
-                A continuación presento una tabla que identifica mis conocimientos en distintos softwares:
-            </p>
+    <div id="contenido">
+        <section >
+            <img src="" alt="">
+            <article>
+                <h2>¿Quién soy?</h2>
+                <p>
+                    Mi nombre es Kevin Isaac Chévez coronel, nací en Ecuador - Guayaquil el 24 de Febrero del
+                    2000, actualmente vivo en el sur de mi ciudad natal, soy estudiante de la Escuela Superior
+                    Politécnica del Litoral (Espol) y sigo la carrera de Ingeniería en las Ciencias de la
+                    Computación.
+                </p>
+                <p>
+                    Tengo un hermano y soy el menor, actualmente vivo con mi mamá y mi hermano. Amo tanto a
+                    mi mamá como a mi papá. Me considero como una persona perseverante, soy super responsable,
+                    creativo y respetuoso. Como es evidente mi color favorito es el verde neón y el negro, me
+                    encanta la naturaleza en su frondoso estado y los atardeceres me enamoran. Me gusta trabajar
+                    en grupos que sean participativos y que se note el esfuerzo que aplican.
+                </p>
+            </article>
+        </section>
+        <section>
+            <img src="" alt="">
+            <article>
+                <h2>Hobbies</h2>
+                <p>
+                    En mis pasatiempos me gusta realizar la siguientes actividades:
+                </p>
+                <ul>
+                    <li>Aprender nuevas tecnologías.</li>
+                    <li>Aprender las bases de los lenguajes de programación.</li>
+                    <li>Jugar basketball y videojuegos.</li>
+                    <li>Cantar, crear música Rap, o improvisar.</li>
+                    <li>Filosofar y pensar sobre mi vida actual, mis acciones y cómo ser cada día mejor.</li>
+                    <li>Revisar y arreglar circuitos eléctricos de aparatos que están dañados.</li>
+                    <li>Ver los atardeceres y apreciar la naturaleza.</li>
+                    <li>Descanzar en temporadas de climas fríos.</li>
+                </ul>
+                <p>
+                    Entre todos mis pasatiempos tengo como mi top 3 de actividades
+                    favoritas las siguientes de manera resumida:
+                </p>
+                <ol>
+                    <li>Estudiar</li>
+                    <li>Entretenerme</li>
+                    <li>Filosofar</li>
+                </ol>
+            </article>
+        </section>
+        <section>
+            <img src="" alt="">
+            <article>
+                <h2>Estudios</h2>
+                <p>
+                    Inicialmente comencé mis estudios en el pre kinder brindado por el CAMI de la ciudad (ubicación).
+                </p>
+                <p>
+                    Luego de aquello seguí mis estudios primarios en la Escuela Fiscal tdomas Jefferson
+                    (actualmente renombrada como Unidad Educativa Fiscal Ciudad de Esmeraldas).
+                </p>
+                <p>
+                    Mi educación básica y secundaria continuó en el Colegio Fiscal Otto Arosemena Gómez
+                    (ubicado cercanamente a mis anteriores instituciones educativas), donde seguí y culminé
+                    el bachillerato en Ciencias.
+                </p>
+                <p>
+                    Posteriormente seguí estudiando de manera autónoma en internet para ingresar a la Espol.
+                </p>
+                <p>
+                    Actualmente estudio la carrera de Computación en la Espol y de manera adicional y por
+                    beneficios de la universidad he estudiado en cursos adicionales que ayudan a formar mi
+                    profesión, aquellos cursos son los siguientes:
+                </p>
+                <ul>
+                    <li>
+                        Curso de Programación Orientada a Objetos en Java Foundations -
+                        ilearning Oracle Academy.
+                    </li>
+                    <li>
+                        Curso de Redes de Datos Introduction to Networks en CISCO Networking Academy.
+                    </li>
+                </ul>
+                <p>
+                    A continuación presento una tabla que identifica mis conocimientos en distintos softwares:
+                </p>
+            </article>
             <table id="tabla-estudios">
-
+                <thead>
+                    <tr>
+                        <th id="tb-h1">Conocimientos Softwares y lenguajes de Programación</th>
+                        <th class="tb-h2">Básico</th>
+                        <th class="tb-h2">Medio</th>
+                        <th class="tb-h2">Avanzado</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr> <td>Microsoft Word </td><td> </td><td> </td><td>X</td>     </tr>
+                    <tr> <td>Microsoft Excel</td><td> </td><td> </td><td>X</td>     </tr>
+                    <tr> <td>Microsoft PowerPoint</td><td> </td><td>X</td><td> </td></tr>
+                    <tr> <td>Google Drive</td><td> </td><td>X</td><td> </td>        </tr>
+                    <tr> <td>Microsoft Office</td><td> </td><td> </td><td>X</td>    </tr>
+                    <tr> <td>Adobe</td><td> </td><td>X</td><td> </td>               </tr>
+                    <tr> <td>Java</td><td> </td><td> </td><td>X</td>                </tr>
+                    <tr> <td>C++ y C</td><td> </td><td> </td><td>X</td>             </tr>
+                    <tr> <td>Pytdon</td><td> </td><td>X</td><td> </td>              </tr>
+                    <tr> <td>MySQL</td><td> </td><td>X</td><td> </td>               </tr>
+                    <tr> <td>Git</td><td> </td><td> </td><td>X</td>                 </tr>
+                    <tr> <td>PHP</td><td> </td><td>X</td><td> </td>                 </tr>
+                    <tr> <td>Linux</td><td> </td><td>X</td><td> </td>               </tr>
+                </tbody>
             </table>
-        </article>
-    </section>
-    <section>
-        <img src="" alt="">
-        <article>
-            <h2>Pregúntame</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, corrupti impedit. Ut aliquam distinctio
-                esse
-                molestiae hic quos fugit architecto fugiat pariatur dolorum eveniet, quae eum repellendus iste ea ipsum
-            </p>
-        </article>
-    </section>
-
+        </section>
+        <section>
+            <img src="" alt="">
+            <article>
+                <h2>Pregúntame</h2>
+                <p>
+                    Para contactarte conmigo y preguntarme lo que desees, debes llenar los siguientes campos en el formulario:
+                </p>
+                <form action="POST">
+                    <div>
+                        <img src="" alt="">
+                        <label for="txtfld-nombres">Nombres completos</label>
+                        <input type="text" id="txtfld-nombres" name="nombres" placeholder="Ingrese sus nombres completos.">
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <label for="txtfld-correo">Correo Electrónico</label>
+                        <input type="text" id="txtfld-correo" name="correo" placeholder="Ingrese su correo electrónico.">
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <label for="txtfld-correo">Género</label>
+                        <select name="genero" id="slct-genero">
+                            <option value="masculino">Masculino</option>
+                            <option value="femenino">Femenino</option>
+                            <option value="otro">Otro</option>
+                        </select>
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                        <label for="comentarios">Comentarios</label>
+                        <textarea rows="5" cols="30" id="comentario" name="coment" placeholder="Ingrese comentario"></textarea>
+                    </div>
+                    <div>
+                        <input type="checkbox" name="chkBot" id="chkbot"> No soy un robot <br>
+                    </div>
+                    <div>
+                        <button>Enviar</button>
+                    </div>
+                </form>
+            </article>
+        </section>
+        <section>
+            <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org">123 movies</a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">html google map embed</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
+        </section>
+    </div>
     <aside>
         <h2>Parte publicitaria</h2>
-        <img src="imagenes/cat.webp" alt="Un hermoso gato negro" style="width:96px;height:66.2px;">
+        <img src="imagenes/cat.webp" alt="Un hermoso gato negro" style="widtd:96px;height:66.2px;">
     </aside>
-
     <footer>
-        <p>Pie de pagina</p>
-        <a href="mailto:kchevez@espol.edu.ec">kchevez@espol.edu.ec</a>
+        <div class="bloque-pfooter">
+            Recursos<br>
+            <br>
+            Help center<br>
+            Partners<br>
+            Gas-Free Marketplace<br>
+            Docs<br>
+            Utility<br>
+        </div>
+        <div class="bloque-pfooter">
+            Servicios<br>
+            <br>
+            Desarrollo de software <br>
+            Diseño IU/UX <br>
+            Manejo de identidad y verificación <br>
+        </div>
+        <div class="bloque-pfooter">
+            Quicklinks <br>
+            <br>
+            Carreras <br>
+            Recursos <br>
+            Productos <br>
+            Blog <br>
+        </div>
+        <div class="bloque-pfooter">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+        <div id="footer-final">
+            <hr>
+            <a href="mailto:kchevez@espol.edu.ec">kchevez@espol.edu.ec</a> <br>
+            Copyright 2020. Myself. All Rights Reserved
+        </div>
     </footer>
 
     <script src="script.js"></script>
